// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-estimation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Estimate Azure deployment costs before provisioning by analyzing Bicep and ARM templates.
Supports VMs, Storage, SQL Database, App Service, AKS, Container Apps, and more. USE FOR:
cost estimation, pricing estimates, how much will deployment cost, what will cost be,
estimate Azure costs, calculate monthly costs, monthly Azure costs, compare pricing across
regions, analyze template costs, budget planning, infrastructure cost breakdown, deployment
budget, cost breakdown. DO NOT USE FOR: deploying resources (use azure-deploy), optimizing
existing resources (use azure-cost-optimization), monitoring actual spending (use
azure-observability), creating templates (use azure-create-app).
",
  "extractedKeywords": [
    "across",
    "actual",
    "analyze",
    "analyzing",
    "app service",
    "apps",
    "authentication",
    "azure",
    "azure-cost-optimization",
    "azure-create-app",
    "azure-deploy",
    "azure-observability",
    "before",
    "bicep",
    "breakdown",
    "budget",
    "calculate",
    "cli",
    "compare",
    "container",
    "cost",
    "costs",
    "creating",
    "database",
    "deploy",
    "deploying",
    "deployment",
    "estimate",
    "estimates",
    "estimation",
    "existing",
    "function",
    "infrastructure",
    "key vault",
    "keyvault",
    "kubernetes",
    "monitor",
    "monitoring",
    "monthly",
    "more",
    "much",
    "networking",
    "optimizing",
    "planning",
    "pricing",
    "provisioning",
    "regions",
    "resources",
    "service",
    "spending",
    "sql",
    "storage",
    "supports",
    "template",
    "templates",
    "what",
    "will",
  ],
  "name": "azure-cost-estimation",
}
`;

exports[`azure-cost-estimation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "actual",
  "analyze",
  "analyzing",
  "app service",
  "apps",
  "authentication",
  "azure",
  "azure-cost-optimization",
  "azure-create-app",
  "azure-deploy",
  "azure-observability",
  "before",
  "bicep",
  "breakdown",
  "budget",
  "calculate",
  "cli",
  "compare",
  "container",
  "cost",
  "costs",
  "creating",
  "database",
  "deploy",
  "deploying",
  "deployment",
  "estimate",
  "estimates",
  "estimation",
  "existing",
  "function",
  "infrastructure",
  "key vault",
  "keyvault",
  "kubernetes",
  "monitor",
  "monitoring",
  "monthly",
  "more",
  "much",
  "networking",
  "optimizing",
  "planning",
  "pricing",
  "provisioning",
  "regions",
  "resources",
  "service",
  "spending",
  "sql",
  "storage",
  "supports",
  "template",
  "templates",
  "what",
  "will",
]
`;
